# 11402_CS351_ProjectB

./: CMakeLists.txt  README.md
data/: employees.csv
include/: csv_parser.h  database.h
src/: csv_parser.cpp  database.cpp
tests/: CMakeLists.txt  test_csv_parser.cpp  test_database.cpp
